Refactor augment recipe to handle precursor/incompatible augment check by itself, add multiple augment addition & augment removal functionality