@@ -3,7 +3,6 @@ package gurumirum.magialucis.contents;
 import gurumirum.magialucis.contents.data.Augment;
 import gurumirum.magialucis.utils.AugmentProvider;
 import net.minecraft.core.Holder;
-import net.minecraft.core.HolderSet;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.neoforged.neoforge.registries.DeferredHolder;
@@ -11,15 +10,14 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Locale;
-import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public enum Augments implements AugmentProvider {
 	LUX_CAPACITY_1,
-	LUX_CAPACITY_2(p -> p.precursor(LUX_CAPACITY_1)),
-	LUX_CAPACITY_3(p -> p.precursor(LUX_CAPACITY_2)),
+	LUX_CAPACITY_2,
+	LUX_CAPACITY_3,
 
 	IDK;
 
@@ -39,13 +37,10 @@ public enum Augments implements AugmentProvider {
 					IntStream.range(0, p.descriptions)
 							.mapToObj(i ->
 									Component.translatable("magialucis.augment.magialucis." + id + ".description." + i))
-							.collect(Collectors.toList()),
-					p.precursor != null ? HolderSet.direct(p.precursor.stream().map(AugmentProvider::augment).toList()) : HolderSet.empty(),
-					p.incompatible != null ? HolderSet.direct(p.incompatible.stream().map(AugmentProvider::augment).toList()) : HolderSet.empty()
+							.collect(Collectors.toList())
 			);
 		});
 	}
-
 	public @NotNull ResourceLocation id() {
 		return this.holder.getId();
 	}
@@ -63,21 +58,9 @@ public enum Augments implements AugmentProvider {
 
 	private static final class Properties {
 		private int descriptions;
-		private @Nullable Set<AugmentProvider> precursor;
-		private @Nullable Set<AugmentProvider> incompatible;
 
 		public Properties descriptions(int descriptions) {
 			this.descriptions = descriptions;
-			return this;
-		}
-
-		public Properties precursor(@Nullable AugmentProvider @NotNull ... precursor) {
-			this.precursor = Set.of(precursor);
-			return this;
-		}
-
-		public Properties incompatible(@Nullable AugmentProvider @NotNull ... incompatible) {
-			this.incompatible = Set.of(incompatible);
 			return this;
 		}
 	}
